SOFTWARE_FACTORY/infra-gitops/apps/kaanbal-api/overlays/dev/patch-deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaanbal-api
spec:
  template:
    metadata:
      labels:
        environment: dev
    spec:
      containers:
      - name: kaanbal-api
