SOFTWARE_FACTORY/infra-gitops/apps/kaanbal-api/overlays/dev/patch-deployment-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaanbal-api
  labels:
    kaanbal-engine.io/environment: dev
